--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,7 @@ comedorLowRate1.bag
 comedorHighRate1.bag
 aggressive_spinning.bag
 comedorLowRate1.bag
+comedorIda.bag
+comedorVuelta.bag
+comedorQuieto.bag
+comedorQuieto2.bag
