--- a/.gitignore
+++ b/.gitignore
@@ -189,7 +189,13 @@ imu-data.csv
 point-cloud-data.csv
 park_dataset.bag
 
+
 output_bags
 campus_small_dataset.bag
 imu_correct.csv
 analysisImu.py
+
+# Ignore all lasFiles
+/rosbag_tools/outputs/outputs_las2csv/points.csv
+lasFiles/
+
