--- a/.gitignore
+++ b/.gitignore
@@ -188,6 +188,8 @@ hesai-pandar.csv
 imu-data.csv
 point-cloud-data.csv
 park_dataset.bag
+horizontalLidar2.bag
+rosbag_gps_synced.bag
 
 
 output_bags
